# agent-loop

./: CLAUDE.md
.claude/agents/: codebase-discovery.md  external-executor-adapter.md  sonnet-reviewer.md
.claude/commands/: agent-review.md  agent-run.md
agent-loop/: .gitignore  Cargo.toml
agent-loop/src/: artifacts.rs  backend.rs  commands.rs  evidence.rs  id.rs  lib.rs  main.rs
agent-loop/src/schemas/: mod.rs
agent-loop/tests/: integration_test.rs
docs/adr/: adr_001_agent_loop_workflow.md
docs/prd/: agent-loop.md
