[package]
name = "agent_loop"
version = "0.1.0"
edition = "2021"
description = "CLI for agent-loop Phase 1 workflow: init-run, validate-discovery, list-runs, gate-check"
license = "MIT"
authors = ["Claude Code Agent"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time for IDs
chrono = { version = "0.4", features = ["serde"] }

# Path/FS
dirs = "5.0"
regex = "1.10"

# Validation
jsonschema = "0.26"
glob = "0.3"

[dev-dependencies]
# Testing
tempfile = "3.12"
assert_cmd = "2.0"
predicates = "3.1"
walkdir = "2.5"

